@@ -20,18 +20,36 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
     Logger logger = LoggerFactory.getLogger(CorsConfig.class);
+    
+    @Bean
     public CorsFilter corsFilter(){
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000","https://objectstorage.us-phoenix-1.oraclecloud.com",
-                "https://petstore.swagger.io", "http://localhost:5173"));
+        
+        // Agregar origen de tu frontend
+        config.setAllowedOrigins(List.of(
+            "http://localhost:3000", 
+            "https://objectstorage.us-phoenix-1.oraclecloud.com",
+            "https://petstore.swagger.io", 
+            "http://localhost:5173"
+        ));
+        
+        // Métodos permitidos
         config.setAllowedMethods(List.of("GET","POST","PUT","OPTIONS","DELETE","PATCH"));
-        config.setAllowedOrigins(Collections.singletonList("*"));
-        config.addAllowedHeader("*");
+        
+        // Encabezados permitidos
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
+        
+        // Expone encabezados
         config.addExposedHeader("location");
+        
+        // Permite credenciales
+        config.setAllowCredentials(true);
+        
+        // Configuración de CORS
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-        CorsFilter filter = new CorsFilter(source);
-        return filter;
+        
+        return new CorsFilter(source);
     }
-
 }
+
